--- a/flutter_clone_instagram/pubspec.yaml
+++ b/flutter_clone_instagram/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   cupertino_icons: ^1.0.2
   get: ^4.6.5
   cached_network_image: ^3.3.1
+  expandable: ^5.0.1
+  text: ^0.2.0
+  expandable_text: ^2.3.0
 
 dev_dependencies:
   flutter_test:
