feat. search 화면 ui 개발
Search화면 UI
+1.appbar 구현
+2. staggred레이아웃 -staggeredgridlayout 과 유사하게 배치

--- a/flutter_clone_instagram/pubspec.yaml
+++ b/flutter_clone_instagram/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   expandable: ^5.0.1
   text: ^0.2.0
   expandable_text: ^2.3.0
+  quiver: ^3.2.1
 
 dev_dependencies:
   flutter_test:
