--- a/flutter_clone_instagram/pubspec.yaml
+++ b/flutter_clone_instagram/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   text: ^0.2.0
   expandable_text: ^2.3.0
   quiver: ^3.2.1
+  webview_flutter: ^4.4.4
 
 dev_dependencies:
   flutter_test:
@@ -49,7 +50,7 @@ dev_dependencies:
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
+  # rules and activating additional ones. 
   flutter_lints: ^1.0.0
 
 # For information on the generic Dart part of this file, see the
